k8s/overlays/aws/patches/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanner-app
  namespace: phishing-url-scanner
spec:
  template:
    spec:
      containers:
        - name: scanner-app
          imagePullPolicy: Always
