k8s/overlays/aws/patches/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: phishing-url-scanner
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: scanner.wongyx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scanner-app-service
                port:
                  number: 8080
